--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   scoped_model: ^2.0.0-nullsafety.0
+  flutter_swiper_null_safety: ^1.0.2
   fluro: ^2.0.4
+  image_picker: ^0.8.2
 
 dev_dependencies:
   flutter_test:
